--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -3,5 +3,5 @@
       <%= f.input :address %>
       <%= f.input :phone_number %>
       <%= f.input :category, collection: Restaurant::CATEGORIES  %>
-      <%= f.submit %>
+      <%= f.submit   class: "btn btn-primary" %>
   <% end %>
